--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "allowJs": true,
     "typeRoots": [
       "node_modules/@types"
     ],
@@ -15,7 +16,7 @@
       "es2017",
       "dom"
     ],
-    "types":[
+    "types": [
       "hammerjs"
     ]
   }
